# gameEngineExperiment

./: Cargo.toml  README.md
assets/models/: CharWalk.glb  rock1.glb  tree1.glb  tree2.glb
src/: main.rs
src/components/: types.rs
src/systems/: camera.rs  entities.rs  input.rs  mod.rs  movement.rs  resources.rs  ui.rs
tests/: resource_type_tests.rs
